Fixed contrast issues

--- a/final/styles/index-small.css
+++ b/final/styles/index-small.css
@@ -272,9 +272,10 @@
     }
 
     main>h1 {
-        color: var(--chess-green);
-        padding-left: 1rem;
+        color: var(--chess-light-green);
+        padding: 0 0 0 1rem;
         font-size: 2.5rem;
+        font-weight: 800;
         text-shadow: 2px 2px 4px var(--chess-black);
     }
 
